# pozik-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  shell.nix
src/: main.py
src/ai/: __init__.py  base.py  deepseek.py  gemini.py  router.py
src/bot/: __init__.py  client.py  commands.py  handlers.py
src/core/: __init__.py  access.py  anti_spam.py  config.py  context.py  logger.py  prompts.py  search.py  storage.py
